2010-03-27  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/monopoly.c, client/common/player.c: Use en_US spelling

2010-03-11  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/data/themes/FreeCIV-like/theme.cfg,
	client/gtk/data/themes/Wesnoth-like/theme.cfg: Fix the themes to avoid
	drawing black letters on a black background. (Fixes Ubuntu bug #530988)
	* client/gtk/data/themes/ccFlickr: Added a new theme written by Aaron
	Williamson <aaron@copiesofcopies.org>

2010-03-09  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/game-devcards.c, editor/gtk/game-devcards.h,
	common/cards.h, common/cards.c, po/POTFILES.in, client/callback.h,
	client/gtk/develop.c, client/common/develop.c: Add tooltip with
	description of the development cards. (Many thanks to
	aaron@copiesofcopies.org who wrote the basis for the patch
	2008-04-12)

2010-03-02  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/greedy.c: Let the AI select only available resources.
	* configure.ac: Upgrade to GTK+ to 2.12 and glib to 2.16.
	* configure.ac, common/Makefile.am: Fixes the previous patch to
	common/Makefile.am. The newest version of libtool.m4 did not publish
	ECHO.

2010-02-28  Roland Clobus <rclobus@rclobus.nl>
	* meta-server/main.c: Fix some memory leaks.
	* common/Makefile.am: Use variables for sed and echo. (Thanks to Hans
	Fugal who wrote the initial patch)

2010-02-16  Roland Clobus <rclobus@rclobus.nl>
	* kill-game.sh: Added maintenance script for the meta-server.
	* server/player.c: Stop and deregister the tournament timer when the
	time has passed. Cleanup all players that disconnected during the
	registration persiod, to fix the bug that the added computer players
	would leave the game thinking that they are viewers. With the timer
	still running, and even restarting this would cause a fork bomb.

2010-02-10  Roland Clobus <rclobus@rclobus.nl>
	* getVersions.sh: Update for many distributors
	* meta-server/main.c: Fix a resource leak which would cause the meta-